[package]
name = "dloom-flow"
version = "0.1.0"
description = "A Solana flow payment program created with Anchor"
authors = ["Samuel Horjet <samuelhorjet001@gmail.com>"]
repository = "https://github.com/samuelhorjet/dloom-flow"
license = "MIT"
edition = "2021"

# Security: Exclude private keys and build artifacts
exclude = [
    ".anchor",
    ".DS_Store",
    "target/*",
    "!target/idl/",
    "!target/types/",
    "**/*.rs.bk",
    "node_modules",
    "test-ledger",
    ".yarn",
    "test-wallets",
    "*.txt"
]

[lib]
crate-type = ["cdylib", "lib"]
name = "dloom_flow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-token-metadata = { version = "5.1.1" }
bytemuck = { version = "1.24.0", features = ["derive"] }